@@ -2,6 +2,8 @@ debian-policy (3.5.2.1) unstable; urgency=low
 
   * Removed recommendation on packaging-manual      closes: Bug#86507
   * Also now Conflicts and Replaces packaging-manual
+  * Remove FSSTND from binary package, although retain it in the source
+    package for the time being
 
  --
 
